--- a/RMS.App/Views/Requisitions/Edit.cshtml
+++ b/RMS.App/Views/Requisitions/Edit.cshtml
@@ -76,10 +76,18 @@
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.RequestFor, htmlAttributes: new { @class = "control-label col-md-3" })
+                @Html.LabelFor(model => model.RequestFor, htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-8">
-                    @Html.EditorFor(model => model.RequestFor, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.RequestFor, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.RequestFor, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.RequestFor, "", new {@class = "text-danger"})
+                </div>
+            </div>
+
+            <div class="form-group row">
+                @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
                 </div>
             </div>
 
