--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -69,12 +69,13 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.EndDateTime)
                 </td>
-                @*<td>
+                 @*<td>
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>*@
                 <td>
                     @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
                     @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+                    @Html.ActionLink("Notification", "Notification", new { id = item.Id }) |
                     @Html.ActionLink("Delete", "Delete", new {id = item.Id})
                 </td>
             </tr>
