Resolve device scrin hight

--- a/RMS.App/Views/AssignRequisitions/Requests.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Requests.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container" style="min-height: 400px">
+<div class="container">
     <h2>New Requests List</h2>
     <hr />
 
