--- a/RMS.App/Views/Departments/Index.cshtml
+++ b/RMS.App/Views/Departments/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Department List";
 }
 
-<div class="container"style="height: 400px">
+<div class="container">
     <h2>Department List</h2>
     <hr />
     @if (TempData["msg"] != null)
