--- a/RMS.App/Views/Organizations/Index.cshtml
+++ b/RMS.App/Views/Organizations/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Organization List";
 }
 
-<div class="container" style="min-height: 400px">
+<div class="container">
     <h2>Organization List</h2>
     <hr />
     @if (TempData["msg"] != null)
