--- a/RMS.App/Views/RequisitionStatus/Index.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Requisition Status List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="container" style="min-height: 400px">
+<div class="container">
 
     <h2>Requisition Status List</h2>
     <hr />
