--- a/RMS.App/Views/Requisitions/Index.cshtml
+++ b/RMS.App/Views/Requisitions/Index.cshtml
@@ -3,9 +3,12 @@
 @{
     ViewBag.Title = "All Requisitions";
 }
-<div class="container" style="min-height: 400px">
-    <h2>All Requisitions</h2>
-    <hr />
+
+<h2>All Requisitions</h2>
+<hr/>
+
+<div class="container">
+    
 
     @if (TempData["msg"] != null)
     {
