--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
     <!-- End header menu -->
 
 <!-- Start service Area -->
-<section class="service-area">
+<section class="service-area" style="height: 100vh; overflow: auto;">
     <div style="height: 145px;"></div>
     <div class="container">
         <div class="row d-flex justify-content-center">
