--- a/RMS.App/Views/Shared/_LayoutHome.cshtml
+++ b/RMS.App/Views/Shared/_LayoutHome.cshtml
@@ -57,7 +57,7 @@
 <!-- End banner Area -->
 <!-- Start service Area -->
 
-<section class="service-area">
+<section class="service-area" style="height: 100vh; overflow: auto;">
     <div style="height: 50px;"></div>
     <div class="container">
 
