--- a/RMS.App/Views/VehicleTypes/Index.cshtml
+++ b/RMS.App/Views/VehicleTypes/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Vehicle Type List";
 }
 
-<div class="container" style="min-height: 400px">
+<div class="container">
     <h2>Vehicle Type List</h2>
     <hr />
 
