--- a/RMS.App/Views/Designations/Index.cshtml
+++ b/RMS.App/Views/Designations/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Designation List";
 }
 
-<div class="container" style="min-height: 400px">
+<div class="container">
     <h2>Designation List</h2>
     <hr />
 
