--- a/RMS.App/Views/Employees/Index.cshtml
+++ b/RMS.App/Views/Employees/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Employee List";
 }
-<div class="container" style="min-height: 400px">
+<div class="container">
     <h2>Employee List</h2>
     <hr />
 
