Resolve requisition unique number

--- a/RMS.App/Views/Requisitions/Details.cshtml
+++ b/RMS.App/Views/Requisitions/Details.cshtml
@@ -7,74 +7,33 @@
 <h2>Requisition Details</h2>
 <hr/>
 
-<div>
+<div class="row">
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.Employee.FullName)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.Employee.FullName)</div>
 
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Employee.FullName)
-        </dt>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.RequisitionNumber)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.RequisitionNumber)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Employee.FullName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.RequisitionNumber)
-        </dt>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.FromPlace)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.FromPlace)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.RequisitionNumber)
-        </dd>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.DestinationPlace)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.DestinationPlace)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FromPlace)
-        </dt>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.StartDateTime)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.StartDateTime)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.FromPlace)
-        </dd>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.EndDateTime)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.EndDateTime)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DestinationPlace)
-        </dt>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.Description)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.Description)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.DestinationPlace)
-        </dd>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.RequestFor)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.RequestFor)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDateTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StartDateTime)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDateTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EndDateTime)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.RequestFor)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.RequestFor)
-        </dd>
-
-    </dl>
 </div>
+<br/>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id },new {@class="btn btn-warning"}) &nbsp;
     @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
