--- a/RMS.App/Views/Requisitions/Edit.cshtml
+++ b/RMS.App/Views/Requisitions/Edit.cshtml
@@ -86,7 +86,7 @@
             <div class="form-group row">
                 @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-8">
-                    @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control" ,@readOnly="readonly"} })
                     @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
                 </div>
             </div>
