New Requisition search added

--- a/RMS.App/Views/AssignRequisitions/Create.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create Assign Requisition</h2>
+<h2>Assign Requisition</h2>
 <hr/>
 
 
@@ -60,7 +60,7 @@
             <div class="col-md-3"></div>
             <div class="col-md-9">
                 <input type="submit" value="Assign" class="btn btn-default"/> &nbsp;
-                @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
+                @Html.ActionLink("Back to List", "Requests",null,new {@class="btn btn-info"})
             </div>
         </div>
     </div>
