--- a/RMS.App/Views/AssignRequisitions/Requests.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Requests.cshtml
@@ -9,6 +9,27 @@
     <h2>New Requests List</h2>
     <hr />
 
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-3 col-sm-3 col-3 text-left no-padding">
+                <p>
+
+                </p>
+            </div>
+
+            <div class="col-lg-9 col-sm-9 col-9 text-right no-padding">
+                <p>
+                    @using (Html.BeginForm("Requests", "AssignRequisitions", FormMethod.Get))
+                    {
+                        <b>Search by ( Requisition Number ) </b>
+                        @Html.TextBox("searchText")
+                        <input type="submit" value="Search" />
+                    }
+                </p>
+            </div>
+        </div>
+    </div>
+
     <table class="table table-bordered table-active table-striped">
         <tr>
             <th>
