--- a/RMS.App/Views/Employees/Edit.cshtml
+++ b/RMS.App/Views/Employees/Edit.cshtml
@@ -15,6 +15,13 @@
     
     @Html.ValidationSummary(true, "", new {@class = "text-danger"})
     @Html.HiddenFor(model => model.Id)
+
+        @if (TempData["msg"] != null)
+        {
+            <div class="alert alert-warning text-danger">
+                @Html.Raw(TempData["msg"])
+            </div>
+        }
     <div class="row border">
 
         <div class="col-md-12">
@@ -492,7 +499,7 @@
         <div class="col-md-9"></div>
         <div class="col-md-3 text-right">
             @Html.ActionLink("Back to List", "Index", null, new {@class = "btn btn-info"}) &nbsp;
-            <input type="submit" value="&nbsp;Update &nbsp;" class="btn btn-default"/>
+            <input type="submit" value="&nbsp; Update &nbsp;" class="btn btn-default"/>
 
         </div>
     </div>
