--- a/RMS.App/Views/AssignRequisitions/Details.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Details.cshtml
@@ -149,6 +149,6 @@
 </div>
 
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) &nbsp;
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { @id = Model.Id}, new { @class= "btn btn-warning"}) &nbsp;
+    @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
 </p>
