--- a/RMS.App/Views/AssignRequisitions/ViewDetails.cshtml
+++ b/RMS.App/Views/AssignRequisitions/ViewDetails.cshtml
@@ -52,5 +52,5 @@
     
 </div>
 <p>
-    @Html.ActionLink("Back to List", "Requests")
+    @Html.ActionLink("Back to List", "Requests",null,new {@class="btn btn-info"})
 </p>
