--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -5,7 +5,11 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
-                    <a href="@Url.Action("Index", "Home")"><img src="~/Content/img/logo.png" alt="Home Logo" title="Home" /></a>
+
+                    <p>
+                        <a href="@Url.Action("Index", "Home")"><img src="~/Content/img/bcc_logo.png" width="40" height="40" alt="Home Logo" title="Home BCC"/></a>
+                        &nbsp; <strong style="font-size: 18px; font-family:serif" class="font-weight-bold font-italic">Bangladesh Computer Council</strong>
+                    </p>
                 </div>
 
                 <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
