--- a/RMS.App/Views/AssignRequisitions/Cancel.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Cancel.cshtml
@@ -18,36 +18,40 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.RequisitionNumber, "RequisitionNumber", htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.TextBox("RequisitionNumber", null, new {htmlAttributes = new {@readonly = true}})
-                @Html.ValidationMessageFor(model => model.RequisitionNumber, "Requisition Number Not Changed", new {@class = "text-danger"})
+            <div class="col-md-5">
+                @Html.TextBox("RequisitionNumber", null, htmlAttributes: new {@class = "form-control", @disabled = "disabled"})
+                @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new {@class = "text-danger"})
             </div>
         </div>
-        <div class="col-md-10">
-            @Html.TextBox("RequisitionId", null, new { htmlAttributes = new { @class = "text-box single-line readonly" } })
-            @Html.ValidationMessageFor(model => model.RequisitionId, "Requisition Id Not Changed", new { @class = "text-danger" })
+        <div class="form-group row">
+            @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+
+                @Html.TextBox("RequisitionId", null, htmlAttributes: new { @class = "form-control", @disabled = "disabled" })
+                @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
+            </div>
         </div>
-        <div class="form-group">
-            @Html.Label("Status Id", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("RequisitionStatusId", null, new { htmlAttributes = new { @class = "text-box single-line readonly" } })
-                @Html.ValidationMessage("Status Id", "Requisition Id Not Changed", new { @class = "text-danger" })
+        
+        <div class="form-group row">
+            @Html.LabelFor(model=>model.RequisitionStatusId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.DropDownList("RequisitionStatusId", null, htmlAttributes: new { @class = "form-control", @disabled = "disabled" })
+                @Html.ValidationMessage("RequisitionStatusId", "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+        <div class="form-group row">
+            <div class="col-md-2"></div>
+            <div class="col-md-5">
+                <input type="submit" value="Cancel Requist" class="btn btn-warning"/> &nbsp;
+                @Html.ActionLink("Back to List", "Requests",null,new {@class="btn btn-info"})
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
