--- a/RMS.App/Views/AssignRequisitions/Create.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Create.cshtml
@@ -20,14 +20,14 @@
         <div class="form-group row">
             @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-4">
-                @Html.TextBox("RequisitionId", null, htmlAttributes: new { @class = "form-control", @readOnly="readonly"})
+                @Html.TextBox("RequisitionId", null, htmlAttributes: new { @class = "form-control", @disabled = "disabled" })
                 @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
             </div>
         </div>
             <div class="form-group row">
                 @Html.LabelFor(model=>model.RequisitionStatusId, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-4">
-                    @Html.DropDownList("RequisitionStatusId", null, htmlAttributes:new { @class = "form-control", @readOnly="readonly"})
+                    @Html.DropDownList("RequisitionStatusId", null, htmlAttributes:new { @class = "form-control", @disabled= "disabled" })
                     @Html.ValidationMessageFor(model=>model.RequisitionStatusId, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -35,7 +35,7 @@
         <div class="form-group row">
             @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-4">
-                @Html.TextBox("RequisitionNumber",null,htmlAttributes:new {@class="form-control",@readOnly="readonly"})
+                @Html.TextBox("RequisitionNumber",null,htmlAttributes:new {@class="form-control", @disabled = "disabled" })
                 @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
             </div>
         </div>
