--- a/RMS.App/Views/Requisitions/Delete.cshtml
+++ b/RMS.App/Views/Requisitions/Delete.cshtml
@@ -9,73 +9,36 @@
 <h3 class="text-danger">Are you sure you want to delete this?</h3>
 <hr/>
 
-<div>
+<div class="row">
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.EmployeeId)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.Employee.FullName)</div>
 
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Employee.FullName)
-        </dt>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.FromPlace)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.FromPlace)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Employee.FullName)
-        </dd>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.DestinationPlace)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.DestinationPlace)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FromPlace)
-        </dt>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.StartDateTime)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.StartDateTime)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.FromPlace)
-        </dd>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.EndDateTime)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.EndDateTime)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DestinationPlace)
-        </dt>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.Description)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.Description)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.DestinationPlace)
-        </dd>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.RequestFor)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.RequestFor)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDateTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StartDateTime)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDateTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EndDateTime)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.RequestFor)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.RequestFor)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-danger" />  
-            @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
-        </div>
-    }
 </div>
+<br />
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-actions no-color">
+        <input type="submit" value="Delete" class="btn btn-danger" /> &nbsp;
+        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
+    </div>
+}
