--- a/RMS.App/Views/AssignRequisitions/Requests.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Requests.cshtml
@@ -69,9 +69,9 @@
                             @Html.DisplayFor(modelItem => item.RequisitionId)
                         </td>
                         <td>
-                            @Html.ActionLink("Assign Requisition", "Create", new { id = item.RequisitionId }) |
-                            @Html.ActionLink("View", "ViewDetails", new { id = item.RequisitionId }) |
-                            @Html.ActionLink("Cancel Requisition", "Cancel", new { id = item.RequisitionId })
+                            @Html.ActionLink("Assign Requisition", "Create", new { requisitionId = item.RequisitionId }) |
+                            @Html.ActionLink("View", "ViewDetails", new {id = item.RequisitionId}) |
+                            @Html.ActionLink("Cancel Requisition", "Cancel", new {id = item.RequisitionId})
 
                         </td>
                     </tr>
