Assigned Requisition update and Details Changed

--- a/RMS.App/Views/AssignRequisitions/Details.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Details.cshtml
@@ -18,24 +18,24 @@
                 <td>@Html.DisplayFor(model => model.RequisitionId)</td>
             </tr>
             <tr>
-                <td>@Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)</td>
-                <td>@Html.DisplayFor(model => model.Requisition.RequisitionNumber)</td>
+                <td>@Html.DisplayNameFor(model => model.RequisitionNumber)</td>
+                <td>@Html.DisplayFor(model => model.RequisitionNumber)</td>
             </tr>
             <tr>
                 <td>@Html.DisplayName("Requestor Full Name")</td>
-                <td>@Html.DisplayFor(model => model.Requisition.Employee.FullName)</td>
+                <td>@Html.DisplayFor(model => model.Employee.FullName)</td>
             </tr>
             <tr>
                 <td>@Html.DisplayName("Designation")</td>
-                <td>@Html.DisplayFor(model => model.Requisition.Employee.Designation.Title)</td>
+                <td>@Html.DisplayFor(model => model.Employee.Designation.Title)</td>
             </tr>
             <tr>
-                <td>@Html.DisplayNameFor(model => model.Requisition.Employee.ContactNo)</td>
-                <td>@Html.DisplayFor(model => model.Requisition.Employee.ContactNo)</td>
+                <td>@Html.DisplayNameFor(model => model.Employee.ContactNo)</td>
+                <td>@Html.DisplayFor(model => model.Employee.ContactNo)</td>
             </tr>
             <tr>
-                <td>@Html.DisplayNameFor(model => model.Requisition.Employee.Email)</td>
-                <td>@Html.DisplayFor(model => model.Requisition.Employee.Email)</td>
+                <td>@Html.DisplayNameFor(model => model.Employee.Email)</td>
+                <td>@Html.DisplayFor(model => model.Employee.Email)</td>
             </tr>
             <tr>
                 <td>@Html.DisplayNameFor(model => model.Requisition.RequestFor)</td>
