--- a/RMS.App/Views/AssignRequisitions/Edit.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Edit.cshtml
@@ -1,55 +1,208 @@
 ﻿@model RMS.App.ViewModels.AssignRequisitionViewModel
 
 @{
-    ViewBag.Title = "Update Assign Requisition";
+    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Update Assign Requisition</h2>
-<hr />
+<h2>Edit</h2>
+@if (Model != null)
+{
+    <div class="row">
 
-@using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-        
-        <div class="form-horizontal">
-            
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Id)
-    
-            <div class="form-group row">
-                @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-5">
-                    @Html.DropDownList("RequisitionId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group row">
-                @Html.LabelFor(model => model.VehicleId, "Vehicle Reg No", htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-5">
-                    @Html.DropDownList("VehicleId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.VehicleId, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-           
-    
-            <div class="form-group row">
-                @Html.LabelFor(model => model.EmployeeId, "Driver Name", htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-5">
-                    @Html.DropDownList("EmployeeId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
-                </div>
-            </div>
+        <div class="col-md-4">
+            <h4>Assign Requisition Details</h4>
+            <br />
+            <table class="table table-light table-active table-primary table-hover">
 
-            <div class="form-group row">
-                <div class="col-md-3"></div>
-                <div class="col-md-5">
-                    <input type="submit" value="Update" class="btn btn-default"/> &nbsp;
-                    @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
-                </div>
-            </div>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.RequisitionNumber)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayName("Requestor Full Name")</td>
+                    <td>@Html.DisplayFor(model => model.Employee.FullName)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayName("Designation")</td>
+                    <td>@Html.DisplayFor(model => model.Employee.Designation.Title)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Employee.ContactNo)</td>
+                    <td>@Html.DisplayFor(model => model.Employee.ContactNo)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Employee.Email)</td>
+                    <td>@Html.DisplayFor(model => model.Employee.Email)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Requisition.RequestFor)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.RequestFor)</td>
+                </tr>
+            </table>
         </div>
-    }
 
+        <div class="col-md-4">
+            <h4>Where When ...????</h4>
+            <br />
+            <table class="table table-light table-active table-primary table-hover">
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Requisition.StartDateTime)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.StartDateTime)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Requisition.EndDateTime)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.EndDateTime)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Requisition.FromPlace)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.FromPlace)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Requisition.DestinationPlace)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.DestinationPlace)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Requisition.Description)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.Description)</td>
+                </tr>
+
+            </table>
+            </div>
+        <div class="col-md-4">
+            <h4>Vehicle Information</h4>
+            <br />
+            <table class="table table-light table-active table-primary table-hover">
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Vehicle.BrandName)</td>
+                    <td>@Html.DisplayFor(model => model.Vehicle.BrandName)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Vehicle.RegNo)</td>
+                    <td>@Html.DisplayFor(model => model.Vehicle.RegNo)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Vehicle.ModelName)</td>
+                    <td>@Html.DisplayFor(model => model.Vehicle.ModelName)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Vehicle.SeatCapacity)</td>
+                    <td>@Html.DisplayFor(model => model.Vehicle.SeatCapacity)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Vehicle.VehicleType.Name)</td>
+                    <td>@Html.DisplayFor(model => model.Vehicle.VehicleType.Name)</td>
+                </tr>
+
+            </table>
+      </div>
+        <div class="col-md-4">
+            <h4>Driver Information</h4>
+            <br/>
+            <table class="table table-danger table-active table-primary table-hover">
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Employee.FullName)</td>
+                    <td>@Html.DisplayFor(model => model.Employee.FullName)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Employee.Designation.Title)</td>
+                    <td>@Html.DisplayFor(model => model.Employee.Designation.Title)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Employee.ContactNo)</td>
+                    <td>@Html.DisplayFor(model => model.Employee.ContactNo)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Employee.NID)</td>
+                    <td>@Html.DisplayFor(model => model.Employee.NID)</td>
+                </tr>
+
+            </table>
+        </div>
+        <div class="col-md-4">
+            <h4>Requisition Status Information</h4>
+            <br />
+            <table class="table table-danger table-active table-primary table-hover">
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.RequisitionStatus.StatusType)</td>
+                    <td>@Html.DisplayFor(model => model.RequisitionStatus.StatusType)</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+
+}
+
+            @using (Html.BeginForm("Edit","AssignRequisitions",FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-horizontal">
+                    <h4>Assign Requisition Update</h4>
+                    <hr />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.Id)
+                    @Html.HiddenFor(model=>model.RequisitionId)
+
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-4">
+                            @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control",@readonly="readonly" } })
+                            @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Requisition.Description, htmlAttributes: new {@class = "control-label col-md-2"})
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Requisition.Description, new {htmlAttributes = new {@class = "form-control"}})
+                            @Html.ValidationMessageFor(model => model.Requisition.Description, "", new {@class = "text-danger"})
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Vehicle.RegNo, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Vehicle.RegNo, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Vehicle.RegNo, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Vehicle.VehicleType.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Vehicle.VehicleType.Name, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Vehicle.VehicleType.Name, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Employee.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Employee.FullName, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Employee.FullName, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.RequisitionStatus.StatusType, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.RequisitionStatus.StatusType, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.RequisitionStatus.StatusType, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Update" class="btn btn-default" />
+                        </div>
+                    </div>
+                </div>
+            }
+
+            <div>
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+
+            @section Scripts {
+                @Scripts.Render("~/bundles/jqueryval")
+            }
