--- a/RMS.App/Views/AssignRequisitions/Edit.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Edit.cshtml
@@ -21,18 +21,18 @@
                 </tr>
                 <tr>
                     <td>@Html.DisplayName("Requestor Full Name")</td>
-                    <td>@Html.DisplayFor(model => model.Employee.FullName)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.Employee.FullName)</td>
                 </tr>
                 <tr>
                     <td>@Html.DisplayName("Designation")</td>
-                    <td>@Html.DisplayFor(model => model.Employee.Designation.Title)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.Employee.Designation.Title)</td>
                 </tr>
                 <tr>
-                    <td>@Html.DisplayNameFor(model => model.Employee.ContactNo)</td>
+                    <td>@Html.DisplayNameFor(model => model.Requisition.Employee.ContactNo)</td>
                     <td>@Html.DisplayFor(model => model.Employee.ContactNo)</td>
                 </tr>
                 <tr>
-                    <td>@Html.DisplayNameFor(model => model.Employee.Email)</td>
+                    <td>@Html.DisplayNameFor(model => model.Requisition.Employee.Email)</td>
                     <td>@Html.DisplayFor(model => model.Employee.Email)</td>
                 </tr>
                 <tr>
@@ -147,46 +147,40 @@
                     <div class="form-group row">
                         @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-4">
-                            @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control",@readonly="readonly" } })
+                            @Html.TextBoxFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control",@readonly="readonly" } })
                             @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Requisition.Description, htmlAttributes: new {@class = "control-label col-md-2"})
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Requisition.Description, new {htmlAttributes = new {@class = "form-control"}})
-                            @Html.ValidationMessageFor(model => model.Requisition.Description, "", new {@class = "text-danger"})
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Vehicle.RegNo, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Vehicle.RegNo, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Vehicle.RegNo, "", new { @class = "text-danger" })
+                    
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.VehicleId, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-4">
+                            @Html.DropDownList("VehicleId",null, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.VehicleId, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group row">
                         @Html.LabelFor(model => model.Vehicle.VehicleType.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Vehicle.VehicleType.Name, new { htmlAttributes = new { @class = "form-control" } })
+                        <div class="col-md-4">
+                            @Html.TextBoxFor(model => model.Vehicle.VehicleType.Name, new { htmlAttributes = new { @class = "form-control"} })
                             @Html.ValidationMessageFor(model => model.Vehicle.VehicleType.Name, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Employee.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Employee.FullName, new { htmlAttributes = new { @class = "form-control" } })
+                    <div class="form-group row">
+                        @Html.Label("Driver Name", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-4">
+                            @Html.DropDownList("EmployeeId",null, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Employee.FullName, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group row">
                         @Html.LabelFor(model => model.RequisitionStatus.StatusType, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.RequisitionStatus.StatusType, new { htmlAttributes = new { @class = "form-control" } })
+                        <div class="col-md-4">
+                            @Html.DropDownList("RequisitionStatusId",null, new { htmlAttributes = new { @class = "form-control", @readonly="readonly"} })
                             @Html.ValidationMessageFor(model => model.RequisitionStatus.StatusType, "", new { @class = "text-danger" })
                         </div>
                     </div>
